# experiment-runner

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  LICENSE  README.md  base_env.yml  build.sh  dev-setup.sh  env.yml  mypy.ini  pylintrc  pyproject.toml  renovate.json  test.sh
.github/workflows/: clean-cache.yml  pre-commit.yml  pytest.yml  release.yml
experiment_runner/: __init__.py  utils.py
experiment_runner/cli/: main.py
experiment_runner/processing/: callbacks.py  configurator.py  mail.py  subprocesses.py
experiment_runner/processing/gpu/: exceptions.py  manager.py  models.py  providers.py  strategies.py
tests/mailer/: test_mailer.py
tests/processing/gpu/: test_providers.py  test_strategies.py
