[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["André Büsgen <andre.buesgen@posteo.de>"]
description = "Tool for running your own experiments on CUDA devices."
name = "experiment-runner"
version = "1.1.0-rc.1"

[tool.poetry.dependencies]
omegaconf = "^2.3.0"
psutil = "^6.0.0"
pydantic = "^2.6.4"
pygments = "^2.16.1"
python = "^3.10"
tabulate = "^0.9.0"
typer = {extras = ["all"], version = "^0.12.0"}

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
commitizen = "^3.20.0"
mypy = "^1.9.0"
nuitka = "^2.1.3"
pre-commit = "^3.3.3"
pylint = "^3.0.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-mock = "^3.11.1"

[tool.poetry.scripts]
experiment = 'experiment_runner.cli.main:main_cmd'
